--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ktakashi.oas.example</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>examples</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
 
@@ -25,7 +25,7 @@
         <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <cucumber.version>7.13.0</cucumber.version>
-        <oas-stub.version>1.3.0-rc2-SNAPSHOT</oas-stub.version>
+        <oas-stub.version>2.0.0-SNAPSHOT</oas-stub.version>
     </properties>
 
     <dependencyManagement>
