--- a/examples/petstore-broker/pom.xml
+++ b/examples/petstore-broker/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>io.github.ktakashi.oas.example</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>examples</artifactId>
         <version>0.0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -31,11 +31,6 @@
         <dependency>
             <groupId>io.github.ktakashi.oas.stub.spring</groupId>
             <artifactId>oas-stub-spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.github.ktakashi.oas.stub.spring</groupId>
-            <artifactId>oas-stub-spring-stub-server</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
