--- a/examples/server/pom.xml
+++ b/examples/server/pom.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>io.github.ktakashi.oas.example</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>examples</artifactId>
         <version>0.0.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.ktakashi.oas.example.guice</groupId>
-    <artifactId>example-guice-app</artifactId>
+    <groupId>io.github.ktakashi.oas.example.server</groupId>
+    <artifactId>server</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>io.github.ktakashi.oas.stub.guice</groupId>
-            <artifactId>oas-stub-guice-module</artifactId>
+            <groupId>io.github.ktakashi.oas.stub</groupId>
+            <artifactId>oas-stub-server</artifactId>
         </dependency>
     </dependencies>
 
