--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,26 +3,20 @@ kotlin = "1.9.24"
 dokka = "1.9.0"
 koin = "3.5.6"
 jackson = "2.17.0"
-servlet-api = "6.0.0"
-swagger-core = "2.2.15"
 junit = "5.9.3"
-hazelcast = "5.3.2"
+hazelcast = "5.3.7"
 mongodb = "4.10.2"
 groovy = "4.0.15"
 spring = "6.1.6"
 spring-boot="3.2.5"
-spring-cloud = "4.1.2"
-spring-cloud-config = "4.1.1"
 projectreactor = "3.6.5"
 reactor-addon = "3.5.1"
-guice = "7.0.0"
-jetty = "12.0.1"
 guava = "32.1.2-jre"
-flapdoodle = "4.9.2"
+flapdoodle = "4.13.1"
 jersey = "3.1.3"
-aspectj = "1.9.20.1"
 reactor-netty = "1.1.18"
 bouncy-castle = "1.78.1"
+commons-codec = "1.17.0"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -45,20 +39,18 @@ jackson-module-jakarta-xmlbind-annotations = { group = "com.fasterxml.jackson.mo
 
 dokka-gradle-plugin = { group = "org.jetbrains.dokka", name = "org.jetbrains.dokka.gradle.plugin", version.ref = "dokka" }
 
+projectreactor-reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "projectreactor" }
+reactor-extra = { group = "io.projectreactor.addons", name = "reactor-extra", version.ref = "reactor-addon" }
 reactor-netty = { group = "io.projectreactor.netty", name = "reactor-netty", version.ref = "reactor-netty" }
 
-servlet-api = { group = "jakarta.servlet", name = "jakarta.servlet-api", version.ref = "servlet-api" }
-inject-api = { group = "jakarta.inject", name = "jakarta.inject-api", version = "2.0.1" }
 ws-rs-api = { group = "jakarta.ws.rs", name = "jakarta.ws.rs-api", version = "3.1.0" }
 mail-api = { group = "jakarta.mail", name = "jakarta.mail-api", version = "2.1.2" }
-xml-bind-api = { group = "jakarta.xml.bind", name = "jakarta.xml.bind-api", version = "4.0.0" }
 validation-api = { group = "jakarta.validation", name = "jakarta.validation-api", version = "3.0.2" }
 annotation-api = { group = "jakarta.annotation", name = "jakarta.annotation-api", version = "2.1.1" }
 
 swagger-perser = { group = "io.swagger.parser.v3", name = "swagger-parser", version = "2.1.22" }
-swagger-core-jakarta = { group = "io.swagger.core.v3", name = "swagger-core-jakarta", version.ref = "swagger-core" }
-swagger-core-annotations-jakarta = { group = "io.swagger.core.v3", name = "swagger-annotations-jakarta", version.ref = "swagger-core" }
-swagger-core-jaxrs2-jakarta = { group = "io.swagger.core.v3", name = "swagger-jaxrs2-jakarta", version.ref = "swagger-core" }
+commons-codec = { group = "commons-codec", name = "commons-codec", version.ref = "commons-codec"}
+
 
 caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version = "3.1.7" }
 groovy-core = { group = "org.apache.groovy", name = "groovy", version.ref = "groovy" }
@@ -72,51 +64,15 @@ jersey-server = { group = "org.glassfish.jersey.core", name = "jersey-server", v
 jersey-container-servlet = { group = "org.glassfish.jersey.containers", name = "jersey-container-servlet", version.ref = "jersey"}
 jersey-media-json-jackson = { group = "org.glassfish.jersey.media", name = "jersey-media-json-jackson", version.ref = "jersey" }
 
-jersey-inject-hk2 = { group = "org.glassfish.jersey.inject", name = "jersey-hk2", version.ref = "jersey" }
-
-aspectjweaver = { group  = "org.aspectj", name = "aspectjweaver", version.ref = "aspectj" }
-aspectjrt = { group  = "org.aspectj", name = "aspectjrt", version.ref = "aspectj" }
-
 hazelcast = { group = "com.hazelcast", name = "hazelcast", version.ref = "hazelcast" }
 mongodb-driver-sync = { group = "org.mongodb", name = "mongodb-driver-sync", version.ref = "mongodb" }
 
-# Below here, should only be used in the modules located under app/spring directory (except test libraries)
 # Spring
-# spring-boot library contains spring-core and spring-context, so we list only difficult things here
-spring-core = { group = "org.springframework", name = "spring-core", version.ref = "spring" }
 spring-web = { group = "org.springframework", name = "spring-web", version.ref = "spring" }
-spring-test = { group = "org.springframework", name = "spring-test", version.ref = "spring" }
-spring-webflux = { group = "org.springframework", name = "spring-webflux", version.ref = "spring" }
-
-# Spring Boot
-spring-boot-core = { group = "org.springframework.boot", name = "spring-boot", version.ref = "spring-boot" }
-spring-boot-starter-core = { group = "org.springframework.boot", name = "spring-boot-starter", version.ref = "spring-boot" }
-spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web", version.ref = "spring-boot" }
-spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux", version.ref = "spring-boot" }
-spring-boot-starter-aop = { group = "org.springframework.boot", name = "spring-boot-starter-aop", version.ref = "spring-boot" }
-spring-boot-starter-actuator = { group = "org.springframework.boot", name = "spring-boot-starter-actuator", version.ref = "spring-boot" }
-spring-boot-starter-jersey = { group = "org.springframework.boot", name = "spring-boot-starter-jersey", version.ref = "spring-boot" }
-spring-boot-starter-logging = { group = "org.springframework.boot", name = "spring-boot-starter-logging", version.ref = "spring-boot" }
 spring-boot-autoconfigure = { group = "org.springframework.boot", name = "spring-boot-autoconfigure", version.ref = "spring-boot" }
 spring-boot-test-autoconfigure = { group = "org.springframework.boot", name = "spring-boot-test-autoconfigure", version.ref = "spring-boot" }
 spring-boot-configuration-processor = { group = "org.springframework.boot", name = "spring-boot-configuration-processor", version.ref = "spring-boot" }
 spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test", version.ref = "spring-boot" }
-
-spring-cloud-starter-bootstrap = { group = "org.springframework.cloud", name = "spring-cloud-starter-bootstrap", version.ref = "spring-cloud" }
-spring-cloud-starter-config = { group = "org.springframework.cloud", name = "spring-cloud-starter-config", version.ref = "spring-cloud-config" }
-spring-cloud-context = { group = "org.springframework.cloud", name = "spring-cloud-context", version.ref = "spring-cloud" }
-
-springdoc-openapi-starter-webmvc-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version = "2.2.0" }
-
-projectreactor-reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "projectreactor" }
-reactor-extra = { group = "io.projectreactor.addons", name = "reactor-extra", version.ref = "reactor-addon" }
-
-
-guice-core = { group = "com.google.inject", name = "guice", version.ref = "guice" }
-guice-servlet = { group = "com.google.inject.extensions", name = "guice-servlet", version.ref = "guice" }
-guice-bridge = { group = "org.glassfish.hk2", name = "guice-bridge", version = "3.0.4" }
-jetty-server = { group = "org.eclipse.jetty", name = "jetty-server", version.ref = "jetty" }
-jetty-ee10-webapp = { group = "org.eclipse.jetty.ee10", name = "jetty-ee10-webapp", version.ref = "jetty" }
 
 guava = { group = "com.google.guava", name = "guava", version.ref = "guava"}
 
