--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ jersey = "3.1.3"
 reactor-netty = "1.1.18"
 bouncy-castle = "1.78.1"
 commons-codec = "1.17.0"
+snakeyaml = "2.2"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -51,6 +52,7 @@ annotation-api = { group = "jakarta.annotation", name = "jakarta.annotation-api"
 swagger-perser = { group = "io.swagger.parser.v3", name = "swagger-parser", version = "2.1.22" }
 commons-codec = { group = "commons-codec", name = "commons-codec", version.ref = "commons-codec"}
 
+snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
 
 caffeine = { group = "com.github.ben-manes.caffeine", name = "caffeine", version = "3.1.7" }
 groovy-core = { group = "org.apache.groovy", name = "groovy", version.ref = "groovy" }
