--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,6 @@
 group=io.github.ktakashi.oas.stub
 version=2.0.0-SNAPSHOT
+
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx1g
