Adding records endpoints

--- a/test/oas-stub-spring-tests/src/test/resources/application.yaml
+++ b/test/oas-stub-spring-tests/src/test/resources/application.yaml
@@ -1,6 +1,7 @@
 oas.stub.test:
   server:
     admin-prefix: /__admin0
+    enable-records: true
     ssl:
       client-auth: require
       keystore:
