--- a/test/cucumber-test/src/main/resources/schema/test-api.yaml
+++ b/test/cucumber-test/src/main/resources/schema/test-api.yaml
@@ -102,8 +102,14 @@ components:
     Profile:
       type: object
       properties:
+        id:
+          type: string
+          format: uuid
         name:
           type: string
+        created_at:
+          type: string
+          format: datetime
     Error:
       type: object
       properties:
