--- a/lib/oas-stub-server/src/test/resources/static-config.yaml
+++ b/lib/oas-stub-server/src/test/resources/static-config.yaml
@@ -1,2 +1,3 @@
 petstore-static: "classpath:/config/petstore-config.yaml"
 test-api-static: "classpath:/config/test-api-config.yaml"
+pain-api: "classpath:/config/pain-api-config.yaml"
