--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.2</version>
+        <version>3.5.3</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ktakashi.oas.example</groupId>
@@ -25,6 +25,8 @@
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <cucumber.version>7.13.0</cucumber.version>
         <oas-stub.version>2.2.1-SNAPSHOT</oas-stub.version>
+        <!-- SpringBoot provide old version -->
+        <kotlin.version>2.2.0</kotlin.version>
     </properties>
 
     <dependencyManagement>
