--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 kotlin = "2.2.0"
 dokka = "2.0.0"
 koin = "4.1.0"
-jackson = "2.19.1"
+jackson = "2.20.0"
 junit = "5.11.4"
 hazelcast = "5.5.0"
 mongodb = "5.3.1"
@@ -31,7 +31,7 @@ kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", versio
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin"}
 koin-jvm = { group = "io.insert-koin", name = "koin-core-jvm", version.ref = "koin"}
 
-jackson-annotations = { group = "com.fasterxml.jackson.core", name = "jackson-annotations", version.ref = "jackson" }
+jackson-annotations = { group = "com.fasterxml.jackson.core", name = "jackson-annotations", version = "2.20" }
 jackson-databind-core = { group = "com.fasterxml.jackson.core", name = "jackson-databind", version.ref = "jackson" }
 jackson-datatype-jdk8 = { group = "com.fasterxml.jackson.datatype", name = "jackson-datatype-jdk8", version.ref = "jackson" }
 jackson-module-kotlin = { group = "com.fasterxml.jackson.module", name = "jackson-module-kotlin", version.ref = "jackson" }
@@ -47,7 +47,7 @@ mail-api = { group = "jakarta.mail", name = "jakarta.mail-api", version = "2.1.3
 validation-api = { group = "jakarta.validation", name = "jakarta.validation-api", version = "3.1.1" }
 annotation-api = { group = "jakarta.annotation", name = "jakarta.annotation-api", version = "3.0.0" }
 
-swagger-perser = { group = "io.swagger.parser.v3", name = "swagger-parser", version = "2.1.25" }
+swagger-perser = { group = "io.swagger.parser.v3", name = "swagger-parser", version = "2.1.35" }
 commons-codec = { group = "commons-codec", name = "commons-codec", version.ref = "commons-codec"}
 
 snakeyaml = { group = "org.yaml", name = "snakeyaml", version.ref = "snakeyaml" }
@@ -80,6 +80,6 @@ bcpkix-jdk18on = { group = "org.bouncycastle", name = "bcpkix-jdk18on", version.
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
 cucumber-bom = { group = "io.cucumber", name = "cucumber-bom", version = "7.21.0" }
 flapdoodle-embed-mongo = { group = "de.flapdoodle.embed", name = "de.flapdoodle.embed.mongo", version.ref = "flapdoodle" }
-rest-assured = { group = "io.rest-assured", name = "rest-assured", version = "5.5.0" }
+rest-assured = { group = "io.rest-assured", name = "rest-assured", version = "5.5.6" }
 
 gatling-charts-highcharts = { group = "io.gatling.highcharts", name = "gatling-charts-highcharts", version.ref = "gatling" }
