--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,20 @@
 [versions]
 kotlin = "2.2.21"
+ktor = "3.3.2"
 dokka = "2.0.0"
 koin = "4.1.0"
 jackson = "3.0.2"
 junit = "5.11.4"
 hazelcast = "5.5.0"
 mongodb = "5.6.1"
-groovy = "4.0.25"
+groovy = "5.0.2"
 spring = "7.0.1"
 spring-boot="4.0.0-RC2"
 projectreactor = "3.8.0"
 reactor-addon = "3.6.0"
 guava = "33.5.0-jre"
 flapdoodle = "4.18.1"
+netty = "4.2.7.Final"
 reactor-netty = "1.3.0"
 bouncy-castle = "1.82"
 commons-codec = "1.20.0"
@@ -28,12 +30,15 @@ dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 [libraries]
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 
+ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
+ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
+ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
+
 koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin"}
 koin-jvm = { group = "io.insert-koin", name = "koin-core-jvm", version.ref = "koin"}
 
 jackson-annotations = { group = "com.fasterxml.jackson.core", name = "jackson-annotations", version = "2.20" }
 jackson-databind-core = { group = "tools.jackson.core", name = "jackson-databind", version.ref = "jackson" }
-# jackson-datatype-jdk8 = { group = "tools.jackson.datatype", name = "jackson-datatype-jdk8", version.ref = "jackson" }
 jackson-module-kotlin = { group = "tools.jackson.module", name = "jackson-module-kotlin", version.ref = "jackson" }
 
 dokka-gradle-plugin = { group = "org.jetbrains.dokka", name = "org.jetbrains.dokka.gradle.plugin", version.ref = "dokka" }
@@ -41,6 +46,7 @@ dokka-gradle-plugin = { group = "org.jetbrains.dokka", name = "org.jetbrains.dok
 projectreactor-reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "projectreactor" }
 reactor-extra = { group = "io.projectreactor.addons", name = "reactor-extra", version.ref = "reactor-addon" }
 reactor-netty = { group = "io.projectreactor.netty", name = "reactor-netty", version.ref = "reactor-netty" }
+netty-pkitesting = { group = "io.netty", name = "netty-pkitesting", version.ref = "netty" }
 
 ws-rs-api = { group = "jakarta.ws.rs", name = "jakarta.ws.rs-api", version = "4.0.0" }
 mail-api = { group = "jakarta.mail", name = "jakarta.mail-api", version = "2.1.3" }
@@ -82,6 +88,9 @@ bcpkix-jdk18on = { group = "org.bouncycastle", name = "bcpkix-jdk18on", version.
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
 cucumber-bom = { group = "io.cucumber", name = "cucumber-bom", version = "7.21.0" }
 flapdoodle-embed-mongo = { group = "de.flapdoodle.embed", name = "de.flapdoodle.embed.mongo", version.ref = "flapdoodle" }
-rest-assured = { group = "io.rest-assured", name = "rest-assured", version = "5.5.6" }
 
 gatling-charts-highcharts = { group = "io.gatling.highcharts", name = "gatling-charts-highcharts", version.ref = "gatling" }
+
+[bundles]
+# ktor is only for test, so we can bundle it
+ktor-client-ecosystem = ["ktor-client-core", "ktor-client-cio", "ktor-client-logging"]
