--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,14 +2,14 @@
 kotlin = "2.2.21"
 ktor = "3.3.2"
 dokka = "2.0.0"
-koin = "4.1.0"
+koin = "4.1.1"
 jackson = "3.0.2"
 junit = "5.11.4"
-hazelcast = "5.5.0"
+hazelcast = "5.6.0"
 mongodb = "5.6.1"
 groovy = "5.0.2"
 spring = "7.0.1"
-spring-boot="4.0.0-RC2"
+spring-boot="4.0.0"
 projectreactor = "3.8.0"
 reactor-addon = "3.6.0"
 guava = "33.5.0-jre"
@@ -21,6 +21,7 @@ commons-codec = "1.20.0"
 snakeyaml = "2.5"
 jersey = "4.0.0"
 gatling = "3.13.3"
+testcontainers = "2.0.2"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -90,6 +91,7 @@ bcpkix-jdk18on = { group = "org.bouncycastle", name = "bcpkix-jdk18on", version.
 junit-bom = { group = "org.junit", name = "junit-bom", version.ref = "junit" }
 cucumber-bom = { group = "io.cucumber", name = "cucumber-bom", version = "7.21.0" }
 flapdoodle-embed-mongo = { group = "de.flapdoodle.embed", name = "de.flapdoodle.embed.mongo", version.ref = "flapdoodle" }
+testcontainers-bom = { group = "org.testcontainers", name = "testcontainers-bom", version.ref = "testcontainers" }
 
 gatling-charts-highcharts = { group = "io.gatling.highcharts", name = "gatling-charts-highcharts", version.ref = "gatling" }
 
